# api/docs/swagger.json
@@ -717,9 +717,6 @@
                 "created_at": {
                     "type": "string"
                 },
-                "deleted_at": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
@@ -740,7 +737,7 @@
                 "childs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.ListChild"
+                        "$ref": "#/definitions/models.Category"
                     }
                 },
                 "created_at": {
@@ -835,26 +832,6 @@
                     "items": {
                         "$ref": "#/definitions/models.Product"
                     }
-                }
-            }
-        },
-        "models.ListChild": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "parent_id": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
